# recap

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
web/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
web/.github/workflows/: ci.yml  release.yml
web/crates/recap-cli/: Cargo.toml
web/crates/recap-cli/src/: main.rs
web/crates/recap-cli/src/commands/: claude.rs  config.rs  dashboard.rs  mod.rs  report.rs  source.rs  sync.rs  tempo_report.rs  work.rs
web/crates/recap-cli/src/output/: mod.rs
web/crates/recap-cli/tests/: cli_integration.rs
web/crates/recap-core/: Cargo.toml
web/crates/recap-core/src/: error.rs  lib.rs  utils.rs
web/crates/recap-core/src/auth/: mod.rs
web/crates/recap-core/src/db/: mod.rs
web/crates/recap-core/src/models/: mod.rs
web/crates/recap-core/src/services/: compaction.rs  excel.rs  http_export.rs  llm.rs  llm_batch.rs  llm_pricing.rs  llm_usage.rs  mod.rs  session_parser.rs  snapshot.rs  sync.rs  tempo.rs  worklog.rs
web/crates/recap-core/tests/: compaction_test.rs
web/docs/: DATA_SOURCES.md  DEVELOPMENT_NOTES.md
web/docs/plans/: 2026-01-30-projects-page-design.md  2026-01-30-projects-page-implementation.md  2026-02-04-quota-tracking-design.md  2026-02-04-quota-tracking-implementation.md
web/e2e/: tsconfig.json  wdio.conf.ts
web/e2e/specs/: auth.e2e.ts  dashboard.e2e.ts  navigation.e2e.ts  settings.e2e.ts
web/src/: App.tsx  index.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/benches/: timeline_parsing.rs
web/src-tauri/capabilities/: default.json
web/src-tauri/examples/: verify_worklog.rs
web/src-tauri/icons/: icon.icns
web/src-tauri/scripts/: test_worklog_integration.sh  verify_worklog_data.rs
web/src-tauri/src/: lib.rs  main.rs
web/src-tauri/src/api/: auth.rs  claude.rs  config.rs  gitlab.rs  mod.rs  reports.rs  sync.rs  tempo.rs  users.rs  work_items.rs
web/src-tauri/src/auth/: mod.rs
web/src-tauri/src/commands/: antigravity.rs  auth.rs  background_sync.rs  batch_compaction.rs  claude.rs  config.rs  danger_zone.rs  gitlab.rs  http_export.rs  llm_usage.rs  mod.rs  notification.rs  quota.rs  quota_timer.rs  reports.rs  snapshots.rs  sources.rs  sync.rs  tempo.rs  tray.rs  users.rs  work_items.rs  worklog_sync.rs
web/src-tauri/src/commands/auth/: commands.rs  mod.rs  repository.rs  service.rs  tests.rs  types.rs
web/src-tauri/src/commands/gitlab/: config.rs  mod.rs  projects.rs  sync.rs  types.rs
web/src-tauri/src/commands/projects/: descriptions.rs  git_diff.rs  mod.rs  queries.rs  summaries.rs  timeline.rs  types.rs
web/src-tauri/src/commands/reports/: export.rs  helpers.rs  mod.rs  queries.rs  types.rs
web/src-tauri/src/commands/sources/: commands.rs  helpers.rs  mod.rs  tests.rs  types.rs
web/src-tauri/src/commands/work_items/: commit_centric.rs  grouped.rs  helpers.rs  mod.rs  mutations.rs  queries.rs  query_builder.rs  sync.rs  types.rs
web/src-tauri/src/db/: mod.rs
web/src-tauri/src/models/: mod.rs
web/src-tauri/src/services/: background_sync.rs  excel.rs  llm.rs  mod.rs  sync.rs  tempo.rs  worklog.rs
web/src-tauri/tests/: integration_worklog.rs  real_worklog_integration.rs
web/src/components/: ContributionHeatmap.tsx  Layout.tsx  MarkdownSummary.tsx  Onboarding.tsx  ProjectSummaryCard.tsx  ProtectedRoute.tsx  ViewModeSwitcher.tsx  WorkGanttChart.tsx
web/src/components/icons/: GeminiIcon.tsx  OpenAIIcon.tsx  index.ts
web/src/components/ui/: card.tsx  command.tsx  dialog.tsx  input.tsx  progress.tsx  tabs.tsx
web/src/hooks/: useApi.ts  useAppSync.ts  useBackgroundTask.ts  useUpdateChecker.ts
web/src/lib/: api.ts  auth.tsx  tauri-api.ts  utils.ts
web/src/pages/: Dashboard.tsx  Login.tsx  Onboarding.tsx  Reports.tsx  Settings.tsx  Team.tsx  WorkItems.tsx
web/src/pages/Dashboard/: index.tsx
web/src/pages/Dashboard/components/: ProjectDistribution.tsx  QuickActions.tsx  QuotaCard.tsx  RecentActivities.tsx  WeeklyStats.tsx  WorkItemsStatus.tsx  index.ts
web/src/pages/Dashboard/hooks/: useDashboard.ts
web/src/pages/LlmUsage/: index.tsx
web/src/pages/LlmUsage/components/: DailyChart.tsx  ModelBreakdown.tsx  UsageLogs.tsx  UsageSummary.tsx
web/src/pages/LlmUsage/hooks/: useLlmUsage.ts
web/src/pages/Projects/: TimelinePeriodDetailPage.tsx  index.tsx
web/src/pages/Projects/hooks/: index.ts  useCommitDiff.test.ts  useCommitDiff.ts  useProjectDetail.ts  useProjectTimeline.ts  useProjects.ts  useTimelineSummaries.ts
web/src/pages/Quota/: ToolDetailPage.tsx  index.tsx  tools.ts
web/src/pages/Quota/components/: AccountCard.tsx  ClaudeAuthConfig.tsx  CostCard.tsx  CostChart.tsx  CostSkeleton.tsx  HistorySkeleton.tsx  QuotaChart.tsx  QuotaMiniCard.tsx  QuotaStats.tsx  QuotaSummaryCard.tsx  ToolOverviewCard.tsx  index.ts
web/src/pages/Quota/hooks/: index.ts  useQuotaPage.ts  useToolDetail.ts
web/src/pages/Reports/: index.tsx
web/src/pages/Reports/components/: PEReportTab.tsx  index.ts  (+2 more)
web/src/pages/Review/: index.tsx
web/src/pages/Settings/: index.tsx
web/src/pages/ThisWeek/: DayDetailPage.tsx  ProjectDayDetailPage.tsx  index.tsx
web/src/pages/WorkItems/: index.tsx
web/src/pages/Worklog/: index.tsx
web/src/services/: auth.test.ts  auth.ts  background-sync.test.ts  background-sync.ts  batch-compaction.ts  client.ts  config.test.ts  config.ts  danger-zone.ts  index.ts  jiraIssueCache.ts  llm-usage.ts  notification.ts  projects.ts  quota-timer.ts  quota.ts  reports.test.ts  reports.ts  sync.ts  tray.ts  updater.ts  work-items.test.ts  work-items.ts  worklog-sync.ts  worklog.ts
web/src/services/integrations/: antigravity.test.ts  antigravity.ts  claude.test.ts  claude.ts  gitlab.test.ts  gitlab.ts  http-export.ts  index.ts  sources.test.ts  sources.ts  teams.ts  tempo.test.ts  tempo.ts
web/src/test/: fixtures.ts  setup.ts
web/src/test/mocks/: tauri.ts
web/src/types/: auth.ts  config.ts  http-export.ts  index.ts  integrations.ts  llm-usage.ts  projects.ts  quota.ts  reports.ts  sync.ts  work-items.ts  worklog-sync.ts  worklog.ts
(+239 files in other folders)
