[project]
name = "tempo-sync"
version = "0.1.0"
description = "Sync development activity to Jira Tempo worklogs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Wei-Fan Liao" }
]
keywords = ["jira", "tempo", "worklog", "sync", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",  # 美化 CLI 輸出
    "typer>=0.12.0",  # 現代 CLI 框架
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.50.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
all-llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
]
outlook = [
    "msal>=1.24.0",
]

[project.scripts]
tempo = "tempo_sync.cli:app"

[project.urls]
Homepage = "https://github.com/weifanliao/tempo-sync"
Repository = "https://github.com/weifanliao/tempo-sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tempo_sync"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
