[workspace]
resolver = "2"
members = [
    "crates/recap-core",
    "crates/recap-cli",
    "src-tauri",
]

[workspace.package]
version = "2.2.0-beta.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/recap/recap"

[workspace.dependencies]
# Shared dependencies across workspace members
# Crates can use: dependency = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Excel export
rust_xlsxwriter = "0.79"

# Config
directories = "5"
dirs = "5"
shellexpand = "3"

# Dev dependencies
tempfile = "3"
