[package]
name = "recap"
version = "2.0.0"
description = "Recap - Work tracking and reporting tool"
authors = ["Recap Team"]
license = "MIT"
repository = "https://github.com/recap/recap"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "recap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# HTTP client (for GitLab/Jira API)
reqwest = { version = "0.12", features = ["json"] }

# File watching (for auto-sync)
notify = "6"

# Excel export
rust_xlsxwriter = "0.79"

# Config
directories = "5"
dirs = "5"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "timeline_parsing"
harness = false

[[example]]
name = "verify_worklog"
path = "examples/verify_worklog.rs"
