[package]
name = "recap-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Recap - Work tracking and reporting tool"
license = "MIT"

[[bin]]
name = "recap"
path = "src/main.rs"

[dependencies]
# Core library
recap-core = { path = "../recap-core" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Output formatting
tabled = "0.17"
colored = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Database (for direct queries in commands)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
uuid = { version = "1.16", features = ["v4"] }
dirs = "5"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
